cambios al front y nuevas vistas

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,14 @@
 	<head>
 		<!-- Head with links and settings -->
 		<%- include('templates/head')%>
-		<title>IDQ - INICIO</title>
+		<title>IDQ - Inicio</title>
 	</head>
 	<body>
-		<h1>Index</h1>
+		<%- include('templates/navbar')%>
+
+		<div class="container mt-3">
+            <h1>Index</h1>
+        </div>
 
 		<!-- Footer -->
 		<%- include('templates/footer')%>
