--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,14 +3,14 @@
 	<head>
 		<!-- Head with links and settings -->
 		<%- include('templates/head')%>
-		<title>IDQ - LOGIN</title>
+		<title>IDQ - Iniciar Sesion</title>
 	</head>
 	<body>
 		<!-- Form to login -->
-        <form action="../session/login" method="POST">
+        <form action="../session/login" method="POST" enctype="application/x-www-form-urlencoded">
             <input type="text" name="user" placeholder="Username">
             <input type="password" name="password" placeholder="Password">
-            <input type="submit" value="Login">
+            <button type="submit">Enviar</button>
         </form>
 
 		<!-- Footer -->
