--- a/views/panel/viewQR.ejs
+++ b/views/panel/viewQR.ejs
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <img src="<%= url %>" alt="" srcset="">
-</body>
+	<head>
+		<!-- Head with links and settings -->
+		<%- include('../templates/head')%>
+		<title>IDQ - Ver QR</title>
+	</head>
+	<body>
+		<%- include('../templates/navbar')%>
+
+		<div class="container mt-3">
+			<h1>QR</h1>
+
+			<img src="<%= url %>" width="30%" />
+		</div>
+
+		<!-- Footer -->
+		<%- include('../templates/footer')%>
+	</body>
 </html>
