--- a/views/panel/viewQR.ejs
+++ b/views/panel/viewQR.ejs
@@ -9,8 +9,8 @@
 		<%- include('../templates/navbar')%>
 
 		<div class="container mt-3">
-			<h1>QR</h1>
-
+			<h1>Ver QR</h1>
+            <h2><%= name %></h2>
 			<img src="<%= url %>" width="30%" />
 		</div>
 
