--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -24,10 +24,10 @@
                     <a class="nav-link" href="/pages/panel/viewQR">Panel | Ver QR</a>
 				</li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/session/logout">Admin | Ver Usuarios</a>
+                    <a class="nav-link" href="/pages/admin/viewUsers">Admin | Ver Usuarios</a>
 				</li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/session/logout">Admin | Registrar Servidor Publico</a>
+                    <a class="nav-link" href="/pages/admin/addAdmin">Admin | Registrar Servidor Publico</a>
 				</li>
                 <li class="nav-item">
                     <a class="nav-link text-danger" href="/session/logout">Cerrar Sesion</a>
