--- a/views/admin/requestPass.ejs
+++ b/views/admin/requestPass.ejs
@@ -3,23 +3,22 @@
 	<head>
 		<!-- Head with links and settings -->
 		<%- include('templates/head')%>
-		<title>IDQ - Iniciar Sesion</title>
+		<title>IDQ - Valdiacion Contrasena</title>
 	</head>
 	<body>
 		<div class="container mt-3">
-            <h1>Iniciar Sesion</h1>
+            <h1>Validacion de Contrasena Extra</h1>
 			<!-- Form to login -->
 			<form
-				action="../session/login"
+				action="../pages/admin/<%= to %>"
 				method="POST"
 				enctype="application/x-www-form-urlencoded"
 			>
-				<input type="text" name="user" placeholder="Username" />
-				<input type="password" name="password" placeholder="Password" />
+				<input type="text" placeholder="Name" value="<%= name %>" readonly/>
+				<input type="password" name="password" placeholder="Password" required/>
 				<button type="submit">Enviar</button>
 			</form>
             <h3 class="text-danger"><%= error !== undefined ? error : '' %></h3>
-			<a href="/pages/register">Registrar nuevo usuario</a>
 		</div>
 		<!-- Footer -->
 		<%- include('templates/footer')%>
