--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 		<%- include('templates/navbar')%>
 
 		<div class="container mt-3">
-            <h1>Index</h1>
+            <h1>Inicio</h1>
         </div>
 
 		<!-- Footer -->
