--- a/views/panel/viewDocs.ejs
+++ b/views/panel/viewDocs.ejs
@@ -9,7 +9,7 @@
 		<%- include('../templates/navbar')%>
 
 		<div class="container mt-3">
-			<h1 class="mt-5">Ver Documentos</h1>
+			<h1>Ver Documentos</h1>
 			<!-- Show a list with all documwents -->
 			<table class="table">
 				<thead>
