--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,23 +3,29 @@
 	<head>
 		<!-- Head with links and settings -->
 		<%- include('templates/head')%>
-		<title>IDQ - Iniciar Sesion</title>
+		<title>IDQ - Registrar Usuario</title>
 	</head>
 	<body>
 		<div class="container mt-3">
-            <h1>Iniciar Sesion</h1>
+			<h1>Registrar nuevo usuario</h1>
 			<!-- Form to login -->
 			<form
-				action="../session/login"
+				action="../session/register"
 				method="POST"
-				enctype="application/x-www-form-urlencoded"
+				enctype="multipart/form-data"
 			>
+				<input type="text" name="name" placeholder="Nombre completo" />
 				<input type="text" name="user" placeholder="Username" />
+				<input
+					type="email"
+					name="email"
+					placeholder="Correo Electronico"
+				/>
 				<input type="password" name="password" placeholder="Password" />
+				<input type="file" name="img" placeholder="Imagen de Usuario" />
 				<button type="submit">Enviar</button>
 			</form>
-            <h3 class="text-danger"><%= error !== undefined ? error : '' %></h3>
-			<a href="/pages/register">Registrar nuevo usuario</a>
+            <a href="/pages/login">Iniciar Sesion</a>
 		</div>
 		<!-- Footer -->
 		<%- include('templates/footer')%>
